--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             </a>
         </div>
         <ul>
-            <li class = "Shop">Shop</li>
-            <li class = "About-us">About Us</li>
-            <li class = "Security-Assesment">Security Assesment</li>
-            <li class = "Services">Services</li>
+            <a href="Shop.html"><li class = "Shop">Shop</li></a>
+            <a><li class = "About-us">About Us</li></a>
+            <a><li class = "Security-Assesment">Security Assesment</li></a>
+            <a><li class = "Services">Services</li></a>
+        </ul>
 
             <div class = "nav-icons" >
                 <a href="#"><img src="Assets/Images/Phone.png" alt="contacts" style = "height: 30px;"></a>
@@ -32,6 +33,5 @@
     </nav>
     <h1>Your Safety<br>Our Priority.</h1>
     <h2>Protecting what matters most with<br>state-of-the-art alarms, CCTV, and<br>24/7 expert monitoring.</h2>
-    
 </body>
 </html>
